app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: sqlserver
  labels:
    app: demo-app
    app.kubernetes.io/component: demo-app
    app.kubernetes.io/instance: demo-app
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/part-of: demo-app
    app.openshift.io/runtime: openliberty
  name: demo-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: demo-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo-app
        deployment: demo-app
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: db-secret-mssql
        image: quay.io/gnunn/javaee-cafe-connect-db-mssql:1.0.0
        imagePullPolicy: Always
        name: cafe
        ports:
        - containerPort: 9080
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
