app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-app
    app.kubernetes.io/component: demo-app
    app.kubernetes.io/instance: demo-app
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/part-of: demo-app
    app.openshift.io/runtime: openliberty
  name: demo-app
spec:
  ports:
  - name: 9080-tcp
    port: 9080
  - name: 9443-tcp
    port: 9443
  selector:
    app: demo-app
    deployment: demo-app
